Added data and item cards

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,15 +7,19 @@ $text-strong: #0c0808;
 $primary: #3f7d20;
 $link: #d03c25;
 
+$card-background-color: #fbfbf8;
+$card-content-padding: 0.25rem 0.75rem 0.7rem;
+
 @import "../node_modules/bulma/sass/utilities/_all.sass";
 @import "../node_modules/bulma/sass/base/_all.sass";
 @import "../node_modules/bulma/sass/helpers/_all.sass";
 @import "../node_modules/bulma/sass/elements/button.sass";
 @import "../node_modules/bulma/sass/elements/container.sass";
-@import "../node_modules/bulma/sass/elements/form.sass";
 @import "../node_modules/bulma/sass/elements/title.sass";
+@import "../node_modules/bulma/sass/elements/content.sass";
+@import "../node_modules/bulma/sass/elements/tag.sass";
 @import "../node_modules/bulma/sass/components/navbar.sass";
-@import "../node_modules/bulma/sass/layout/hero.sass";
-@import "../node_modules/bulma/sass/layout/section.sass";
+@import "../node_modules/bulma/sass/components/card.sass";
+@import "../node_modules/bulma/sass/grid/columns.sass";
 
 @import "./overrides.scss";
