Added plural phrase in header

--- a/src/App.scss
+++ b/src/App.scss
@@ -8,7 +8,7 @@ $primary: #3f7d20;
 $link: #d03c25;
 
 $card-background-color: #fbfbf8;
-$card-content-padding: 0.25rem 0.75rem 0.7rem;
+$card-content-padding: 0.75rem;
 
 @import "../node_modules/bulma/sass/utilities/_all.sass";
 @import "../node_modules/bulma/sass/base/_all.sass";
