--- a/src/overrides.scss
+++ b/src/overrides.scss
@@ -45,3 +45,9 @@
   height: 190px;
   overflow: hidden;
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
