--- a/src/overrides.scss
+++ b/src/overrides.scss
@@ -51,3 +51,11 @@
   justify-content: space-between;
   align-items: baseline;
 }
+
+.footer {
+  padding: 0 1rem 1rem;
+
+  hr {
+    background-color: #e8e9e1;
+  }
+}
